


[tool.poetry]
name = "tikz-extractor"
version = "0.1.2"
description = "A Python package for extracting TikZ picture environments from codebases and generating AI context files"
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/vaibhavblayer/tikz-extractor"
repository = "https://github.com/vaibhavblayer/tikz-extractor"
documentation = "https://github.com/vaibhavblayer/tikz-extractor"
keywords = ["tikz", "latex", "extraction", "cli", "ai-context", "tex", "tikzpicture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]
packages = [{include = "tikz_extractor"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"
safety = "^2.3.0"
bandit = "^1.7.0"

[tool.poetry.scripts]
tikz-extract = "tikz_extractor.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=tikz_extractor --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["tikz_extractor"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false